--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.40.1",
     "@vue-flow/minimap": "^1.5.0",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
